add_library(binary_tree_preorder_traversal binary_tree_preorder_traversal.cc)
add_library(binary_tree_inorder_traversal binary_tree_inorder_traversal.cc)
add_library(binary_tree_postorder_traversal binary_tree_postorder_traversal.cc)
add_library(maximum_depth_of_binary_tree maximum_depth_of_binary_tree.cc)
