add_library(binary_tree_preorder_traversal binary_tree_preorder_traversal.cc)
add_library(binary_tree_inorder_traversal binary_tree_inorder_traversal.cc)
add_library(binary_tree_postorder_traversal binary_tree_postorder_traversal.cc)
add_library(maximum_depth_of_binary_tree maximum_depth_of_binary_tree.cc)
add_library(path_sum path_sum.cc)
add_library(count_univalue_subtrees count_univalue_subtrees.cc)
add_library(construct_binary_tree_from_inorder_and_postorder_traversal construct_binary_tree_from_inorder_and_postorder_traversal.cc)
add_library(construct_binary_tree_preorder_and_inorder_traversal construct_binary_tree_preorder_and_inorder_traversal.cc)
add_library(populating_next_right_pointers_in_each_node populating_next_right_pointers_in_each_node.cc)
add_library(populating_next_right_pointers_in_each_node2 populating_next_right_pointers_in_each_node2.cc)
add_library(lowest_common_ancestor_of_a_binary_tree lowest_common_ancestor_of_a_binary_tree.cc)
