
add_library(lswrc STATIC lswrc.cc)
add_library(container_with_most_water STATIC container_with_most_water.cc)
add_library(sum3 STATIC sum3.cc)
add_library(next_permutation STATIC next_permutation.cc)
add_library(multiply_strings STATIC multiply_strings.cc)
add_library(rotate_image STATIC rotate_image.cc)
add_library(jump_game STATIC jump_game.cc)
add_library(plus_one STATIC plus_one.cc)