add_library(two_sum two_sum.cc)
add_library(string_to_integer_atoi string_to_integer_atoi.cc)
add_library(integer_to_roman integer_to_roman.cc)
add_library(roman_to_integer roman_to_integer.cc)
add_library(3sum_closest 3sum_closest.cc)
add_library(implement_str_str implement_str_str.cc)
add_library(group_anagrams group_anagrams.cc)
add_library(find_median_from_data_stream find_median_from_data_stream.cc)
add_library(compare_version_numbers compare_version_numbers.cc)
