
add_library(spiral_matrix spiral_matrix.cc)
add_library(merge_sorted_array merge_sorted_array.cc)
add_library(pascal_s_trialngle pascal_s_trialngle.cc)
add_library(integer_to_english_word integer_to_english_word.cc)
add_library(reverse_linked_list_2 reverse_linked_list_2.cc)
add_library(move_zeros move_zeros.cc)
