add_library(lswrc  lswrc.cc)
add_library(container_with_most_water  container_with_most_water.cc)
add_library(sum3  sum3.cc)
add_library(next_permutation  next_permutation.cc)
add_library(multiply_strings  multiply_strings.cc)
add_library(rotate_image  rotate_image.cc)
add_library(jump_game jump_game.cc)
add_library(plus_one  plus_one.cc)
add_library(minimum_window_substring  minimum_window_substring.cc)
add_library(read_n_characters_given_read42  read_n_characters_given_read42.cc)
add_library(longest_substring_with_at_most_two_distinct_characters longest_substring_with_at_most_two_distinct_characters.cc)
add_library(missing_ranges missing_ranges.cc)
add_library(next_closest_time next_closest_time.cc)
add_library(expressive_words expressive_words.cc)
add_library(find_and_replace_in_string find_and_replace_in_string.cc)
