add_library(longest_palindromic_substring longest_palindromic_substring.cc)
add_library(maximum_subarray maximum_subarray.cc)
add_library(best_time_to_buy_and_sell_stock best_time_to_buy_and_sell_stock.cc)
add_library(maximum_product_subarray maximum_product_subarray.cc)
add_library(coin_change coin_change.cc)
