add_library(unique_email_address STATIC unique_email_addresses.cc)
add_library(odd_event_jump STATIC odd_event_jump.cc)
add_library(license_key_formatting STATIC license_key_formatting.cc)
add_library(fruit_into_baskets STATIC fruit_into_baskets.cc)
add_library(invert_binary_tree STATIC invert_binary_tree.cc)