add_library(reverse_integer reverse_integer.cc)
add_library(candy candy.cc)
add_library(isomorphic_strings isomorphic_strings.cc)
add_library(strobogrammatic_number strobogrammatic_number.cc)
add_library(bulls_and_cows bulls_and_cows.cc)
add_library(range_sum_query_2d_mutable range_sum_query_2d_mutable.cc)
add_library(my_calendar2 my_calendar2.cc)
add_library(jewels_and_stones jewels_and_stones.cc)
add_library(swap_adjacent_in_lr_string swap_adjacent_in_lr_string.cc)
