add_library(word_squares word_squares.cc)
add_library(strobogrammatic_number2 strobogrammatic_number2.cc)
add_library(word_search2 word_search2.cc)
add_library(android_unlock_patterns android_unlock_patterns.cc)
add_library(letter_combinations_of_a_phone_number letter_combinations_of_a_phone_number.cc)
add_library(generate_parentheses generate_parentheses.cc)
