add_library(median_of_two_sorted_arrays median_of_two_sorted_arrays.cc)
add_library(find_first_and_last_position_of_element_in_sorted_array find_first_and_last_position_of_element_in_sorted_array.cc)
add_library(merge_intervals merge_intervals.cc)
add_library(insert_interval insert_interval.cc)
add_library(valid_anagram valid_anagram.cc)
add_library(count_of_smaller_numbers_after_self count_of_smaller_numbers_after_self.cc)
add_library(peak_index_in_a_mountain_array peak_index_in_a_mountain_array.cc)
