add_library(binary_tree_maximum_path_sum binary_tree_maximum_path_sum.cc)
add_library(word_ladder word_ladder.cc)
add_library(number_of_islands number_of_islands.cc)
add_library(course_schedule2 course_schedule2.cc)
add_library(count_complete_tree_nodes count_complete_tree_nodes.cc)
add_library(longest_increasing_path_in_a_matrix longest_increasing_path_in_a_matrix.cc)