add_library(binary_tree_maximum_path_sum binary_tree_maximum_path_sum.cc)
add_library(word_ladder word_ladder.cc)
add_library(number_of_islands number_of_islands.cc)
add_library(course_schedule2 course_schedule2.cc)
add_library(count_complete_tree_nodes count_complete_tree_nodes.cc)
add_library(longest_increasing_path_in_a_matrix longest_increasing_path_in_a_matrix.cc)
add_library(decode_string decode_string.cc)
add_library(evaluate_division evaluate_division.cc)
add_library(diameter_of_binary_tree diameter_of_binary_tree.cc)
add_library(cracking_the_safe cracking_the_safe.cc)
