include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(reverse_integer_test reverse_integer.cc)
target_link_libraries(reverse_integer_test reverse_integer gtest_main)
gtest_discover_tests(reverse_integer_test)


add_executable(strobogrammatic_number_test strobogrammatic_number.cc)
target_link_libraries(strobogrammatic_number_test strobogrammatic_number gtest_main)
gtest_discover_tests(strobogrammatic_number_test)

