include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(reverse_integer_test reverse_integer.cc)
target_link_libraries(reverse_integer_test reverse_integer gtest_main)
gtest_discover_tests(reverse_integer_test)


add_executable(strobogrammatic_number_test strobogrammatic_number.cc)
target_link_libraries(strobogrammatic_number_test strobogrammatic_number gtest_main)
gtest_discover_tests(strobogrammatic_number_test)

add_executable(bulls_and_cows_test bulls_and_cows.cc)
target_link_libraries(bulls_and_cows_test bulls_and_cows gtest_main)
gtest_discover_tests(bulls_and_cows_test)

add_executable(range_sum_query_2d_mutable_test range_sum_query_2d_mutable.cc)
target_link_libraries(range_sum_query_2d_mutable_test range_sum_query_2d_mutable gtest_main)
gtest_discover_tests(range_sum_query_2d_mutable_test)

add_executable(my_calendar2_test my_calendar2.cc)
target_link_libraries(my_calendar2_test my_calendar2 gtest_main)
gtest_discover_tests(my_calendar2_test)

add_executable(swap_adjacent_in_lr_string_test swap_adjacent_in_lr_string.cc)
target_link_libraries(swap_adjacent_in_lr_string_test swap_adjacent_in_lr_string gtest_main)
gtest_discover_tests(swap_adjacent_in_lr_string_test)

add_executable(guess_the_word_test guess_the_word.cc)
target_link_libraries(guess_the_word_test guess_the_word gtest_main)
gtest_discover_tests(guess_the_word_test)