include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(median_of_two_sorted_arrays_test median_of_two_sorted_arrays_test.cc)
target_link_libraries(median_of_two_sorted_arrays_test median_of_two_sorted_arrays gtest_main)
gtest_discover_tests(median_of_two_sorted_arrays_test)

add_executable(find_first_and_last_position_of_element_in_sorted_array_test find_first_and_last_position_of_element_in_sorted_array.cc)
target_link_libraries(find_first_and_last_position_of_element_in_sorted_array_test find_first_and_last_position_of_element_in_sorted_array gtest_main)
gtest_discover_tests(find_first_and_last_position_of_element_in_sorted_array_test)