include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(word_ladder_test word_ladder.cc)
target_link_libraries(word_ladder_test word_ladder gtest_main)
gtest_discover_tests(word_ladder_test)

add_executable(number_of_islands_test number_of_islands.cc)
target_link_libraries(number_of_islands_test number_of_islands gtest_main)
gtest_discover_tests(number_of_islands_test)

add_executable(course_schedule2_test course_schedule2.cc)
target_link_libraries(course_schedule2_test course_schedule2 gtest_main)
gtest_discover_tests(course_schedule2_test)

add_executable(count_complete_tree_nodes_test count_complete_tree_nodes.cc)
target_link_libraries(count_complete_tree_nodes_test count_complete_tree_nodes gtest_main)
gtest_discover_tests(count_complete_tree_nodes_test)

add_executable(longest_increasing_path_in_a_matrix_test longest_increasing_path_in_a_matrix.cc)
target_link_libraries(longest_increasing_path_in_a_matrix_test longest_increasing_path_in_a_matrix gtest_main)
gtest_discover_tests(longest_increasing_path_in_a_matrix_test)