include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(word_ladder_test word_ladder.cc)
target_link_libraries(word_ladder_test word_ladder gtest_main)
gtest_discover_tests(word_ladder_test)

add_executable(number_of_islands_test number_of_islands.cc)
target_link_libraries(number_of_islands_test number_of_islands gtest_main)
gtest_discover_tests(number_of_islands_test)

add_executable(course_schedule2_test course_schedule2.cc)
target_link_libraries(course_schedule2_test course_schedule2 gtest_main)
gtest_discover_tests(course_schedule2_test)

add_executable(count_complete_tree_nodes_test count_complete_tree_nodes.cc)
target_link_libraries(count_complete_tree_nodes_test count_complete_tree_nodes gtest_main)
gtest_discover_tests(count_complete_tree_nodes_test)

add_executable(longest_increasing_path_in_a_matrix_test longest_increasing_path_in_a_matrix.cc)
target_link_libraries(longest_increasing_path_in_a_matrix_test longest_increasing_path_in_a_matrix gtest_main)
gtest_discover_tests(longest_increasing_path_in_a_matrix_test)

add_executable(decode_string_test decode_string.cc)
target_link_libraries(decode_string_test decode_string gtest_main)
gtest_discover_tests(decode_string_test)

add_executable(evaluate_division_test evaluate_division.cc)
target_link_libraries(evaluate_division_test evaluate_division gtest_main)
gtest_discover_tests(evaluate_division_test)

add_executable(cracking_the_safe_test cracking_the_safe.cc)
target_link_libraries(cracking_the_safe_test cracking_the_safe gtest_main)
gtest_discover_tests(cracking_the_safe_test)

add_executable(most_stones_removed_with_same_row_or_column_test most_stones_removed_with_same_row_or_column.cc)
target_link_libraries(most_stones_removed_with_same_row_or_column_test most_stones_removed_with_same_row_or_column gtest_main)
gtest_discover_tests(most_stones_removed_with_same_row_or_column_test)